[package]
name = "leetcode"
version = "0.1.4"
authors = ["Yu Ding"]
edition = "2018"
homepage = "https://github.com/dingelish/leetcode-rs"
repository = "https://github.com/dingelish/leetcode-rs"
license = "MIT"
description = "Leetcode solutions in Rust"

include = [
    "Cargo.toml",
    "LICENSE",
    "README.md",
    "src/lib.rs",
    "src/two_sum.rs",
    "src/add_two_numbers.rs",
    "src/longest_substring_without_repeating_characters.rs",
    "src/median_of_two_sorted_arrays.rs",
]

[lib]
name = "leetcode"
crate-type = ["rlib", "staticlib"]

[dependencies]
